documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32NET.CS

        [DllImport("L43W32.DLL", EntryPoint = "_L43_HandleVerPLX@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_HandleVerPLX(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HeapAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_HeapAlloc(UInt32 wordcount, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HeapAllocAll@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_HeapAllocAll(ref UInt32 wordcount, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HeapAllocAllDPM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_HeapAllocAllDPM(ref UInt16 wordcount, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HeapAllocDPM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_HeapAllocDPM(UInt16 wordcount, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HeapAllocEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_HeapAllocEx(UInt16 configval, UInt32 wordcount, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HeapWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_HeapWipe(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_HeapWipeDPM@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_HeapWipeDPM(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IndirectRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_IndirectRd(Int32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IndirectWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_IndirectWr(UInt16 value, Int32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IntClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_IntClear(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IntDisable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_IntDisable(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IntEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_IntEnable(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IntEnableCond@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_IntEnableCond(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IntGet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* L43_IntGet(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IORdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_IORdW(Int32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IOWINRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_IOWINRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IOWINWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_IOWINWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_IOWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_IOWrW(UInt16 value, Int32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernBegin@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        unsafe public static extern Int32 L43_KernBegin(IntPtr* vxdptr, ref string cardstr, ref string cardname, Int32 busnum, Int32 devnum, Int32 funcnum);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernDev@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernDev(ref Int32 valueptr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernEnd(IntPtr vxdptr);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernIntClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernIntClear(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernIntInstall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernIntInstall(IntPtr hevent, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernIntParam@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernIntParam(UInt32 clraddr, UInt32 clrwidth, UInt32 clrvalue, UInt32 stataddr, UInt32 statwidth, UInt32 statvalue, UInt32 statmask, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernIntStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernIntStatus(ref Int32 valueptr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernIntUninstall@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernIntUninstall(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernIORdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernIORdW(ref UInt16 valueptr, Int32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernIOWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernIOWrW(UInt16 value, Int32 addrval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernMEMFillW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernMEMFillW(UInt16 value, Int32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernMEMRdL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernMEMRdL(ref UInt32 valueptr, Int32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernMEMRdsL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernMEMRdsL(ref UInt32 bufptr, Int32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernMEMRdsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernMEMRdsW(ref UInt16 bufptr, Int32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernMEMRdW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernMEMRdW(ref UInt16 valueptr, Int32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernMEMWrL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernMEMWrL(UInt32 value, Int32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernMEMWrsL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernMEMWrsL(ref UInt32 bufptr, Int32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernMEMWrsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernMEMWrsW(ref UInt16 bufptr, Int32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernMEMWrW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernMEMWrW(UInt16 value, Int32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernQuick@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernQuick(Int32 flag, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernStatus@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernStatus(ref UInt32 valueptr, UInt32 typeval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_KernStatusEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_KernStatusEx(ref UInt32 valueptr, UInt32 typeval, UInt32 index, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_LabelReverse@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_LabelReverse(UInt32 msgval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_ListAddr(Int32 index, UInt32 listaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListAddrEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_ListAddrEx(Int32 index, UInt32 listaddr, ref UInt16 header);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListAdvance@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_ListAdvance(UInt32 listaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_ListClear(UInt32 listaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_ListConfig(UInt32 configval, Int32 count, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_ListConfigEx(UInt32 configval, Int32 count, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListDataBlkWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_ListDataBlkWr(ref UInt32 dataptr, UInt16 datacount, UInt32 listaddr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ListDataRdEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_ListDataRdEx(Int32 index, UInt32 listaddr, UInt32 handleval);
